--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,3 +3,7 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+
+email_send:
+    path: /send-email
+    controller: App\Controller\EmailController::sendEmail
